oil image Update

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>오일 선택기</h1>
+        <h1>생산 지시판</h1>
         
         <table>
             <tr>
@@ -22,7 +22,7 @@
             <tr>
                 <td>
                     <div class="selector-group">
-                        <label for="top-seal-1">상단 씰:</label>
+                        <label for="top-seal-1">상단 루땡:</label>
                         <select id="top-seal-1" class="top-seal-selector"></select>
                         <label for="company-1">업체명:</label>
                         <select id="company-1" class="company-selector"></select>
