Update README.md, fix index.html

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <select id="top-seal-1" class="top-seal-selector"></select>
                         <label for="company-1">업체명:</label>
                         <select id="company-1" class="company-selector"></select>
-                        <label for="oil-1">오일 종류:</label>
+                        <label for="oil-1">오일 선택:</label>
                         <select id="oil-1" class="oil-selector"></select>
                         <div class="image-container">
                             <img class="top-seal-img-selector" src="" alt="">
@@ -37,11 +37,11 @@
                 </td>
                 <td>
                     <div class="selector-group">
-                        <label for="top-seal-2">상단 씰:</label>
+                        <label for="top-seal-2">상단 루땡:</label>
                         <select id="top-seal-2" class="top-seal-selector"></select>
                         <label for="company-2">업체명:</label>
                         <select id="company-2" class="company-selector"></select>
-                        <label for="oil-2">오일 종류:</label>
+                        <label for="oil-2">오일 선택:</label>
                         <select id="oil-2" class="oil-selector"></select>
                         <div class="image-container">
                             <img class="top-seal-img-selector" src="" alt="">
@@ -52,11 +52,11 @@
                 </td>
                 <td>
                     <div class="selector-group">
-                        <label for="top-seal-3">상단 씰:</label>
+                        <label for="top-seal-3">상단 루땡:</label>
                         <select id="top-seal-3" class="top-seal-selector"></select>
                         <label for="company-3">업체명:</label>
                         <select id="company-3" class="company-selector"></select>
-                        <label for="oil-3">오일 종류:</label>
+                        <label for="oil-3">오일 선택:</label>
                         <select id="oil-3" class="oil-selector"></select>
                         <div class="image-container">
                             <img class="top-seal-img-selector" src="" alt="">
@@ -67,11 +67,11 @@
                 </td>
                 <td>
                     <div class="selector-group">
-                        <label for="top-seal-4">상단 씰:</label>
+                        <label for="top-seal-4">상단 루땡:</label>
                         <select id="top-seal-4" class="top-seal-selector"></select>
                         <label for="company-4">업체명:</label>
                         <select id="company-4" class="company-selector"></select>
-                        <label for="oil-4">오일 종류:</label>
+                        <label for="oil-4">오일 선택:</label>
                         <select id="oil-4" class="oil-selector"></select>
                         <div class="image-container">
                             <img class="top-seal-img-selector" src="" alt="">
@@ -82,11 +82,11 @@
                 </td>
                 <td>
                     <div class="selector-group">
-                        <label for="top-seal-5">상단 씰:</label>
+                        <label for="top-seal-5">상단 루땡:</label>
                         <select id="top-seal-5" class="top-seal-selector"></select>
                         <label for="company-5">업체명:</label>
                         <select id="company-5" class="company-selector"></select>
-                        <label for="oil-5">오일 종류:</label>
+                        <label for="oil-5">오일 선택:</label>
                         <select id="oil-5" class="oil-selector"></select>
                         <div class="image-container">
                             <img class="top-seal-img-selector" src="" alt="">
