--- a/index.html
+++ b/index.html
@@ -11,87 +11,155 @@
     <div class="container">
         <h1>생산 지시판</h1>
         
-        <table>
+        <table style="table-layout:auto">
             <tr>
-                <th>작업1</th>
-                <th>작업2</th>
-                <th>작업3</th>
-                <th>작업4</th>
-                <th>작업5</th>
+                <th colspan="2">작업1</th>
+                <th colspan="2">작업2</th>
+                <th colspan="2">작업3</th>
+                <th colspan="2">작업4</th>
             </tr>
             <tr>
+                <!--작업1-->
                 <td>
-                    <div class="selector-group">
-                        <label for="top-seal-1">상단 루땡:</label>
-                        <select id="top-seal-1" class="top-seal-selector"></select>
-                        <label for="company-1">업체명:</label>
-                        <select id="company-1" class="company-selector"></select>
-                        <label for="oil-1">오일 선택:</label>
-                        <select id="oil-1" class="oil-selector"></select>
-                        <div class="image-container">
-                            <img class="top-seal-img-selector" src="" alt="">
-                            <img class="label-img-selector" src="" alt="">
-                            <img class="oil-img-selector" src="" alt="">
-                        </div>
+                    <div class="image-container">
+                        <img class="oil-img-selector" src="" alt="">
                     </div>
                 </td>
                 <td>
                     <div class="selector-group">
-                        <label for="top-seal-2">상단 루땡:</label>
-                        <select id="top-seal-2" class="top-seal-selector"></select>
-                        <label for="company-2">업체명:</label>
-                        <select id="company-2" class="company-selector"></select>
-                        <label for="oil-2">오일 선택:</label>
-                        <select id="oil-2" class="oil-selector"></select>
+                        <div class="con">
+                            <label for="top-seal-1">상단 루땡:</label>
+                            <select id="top-seal-1" class="top-seal-selector"></select>
+                        </div>
                         <div class="image-container">
                             <img class="top-seal-img-selector" src="" alt="">
-                            <img class="label-img-selector" src="" alt="">
-                            <img class="oil-img-selector" src="" alt="">
                         </div>
+                        <div class="con">
+                            <label for="company-1">업체명:</label>
+                            <select id="company-1" class="company-selector"></select>
+                        </div>
+                        <div class="con">
+                            <label for="oil-1">오일 선택:</label>
+                            <select id="oil-1" class="oil-selector"></select>
+                        </div>
+                        <div class="image-container">
+                            <img class="label-img-selector" src="" alt="">
+                        </div>
+                        <div class="con">
+                            <label>유통기한: </label>
+                            <input type="date">
+                        </div>
+                        <div class="con">
+                            <label>수입원:</label>
+                            <input type="text">
+                        </div>
+                    </div>
+                </td>
+                <!--작업2-->
+                <td>
+                    <div class="image-container">
+                        <img class="oil-img-selector" src="" alt="">
                     </div>
                 </td>
                 <td>
                     <div class="selector-group">
-                        <label for="top-seal-3">상단 루땡:</label>
-                        <select id="top-seal-3" class="top-seal-selector"></select>
-                        <label for="company-3">업체명:</label>
-                        <select id="company-3" class="company-selector"></select>
-                        <label for="oil-3">오일 선택:</label>
-                        <select id="oil-3" class="oil-selector"></select>
+                        <div class="con">
+                            <label for="top-seal-2">상단 루땡:</label>
+                            <select id="top-seal-2" class="top-seal-selector"></select>
+                        </div>
                         <div class="image-container">
                             <img class="top-seal-img-selector" src="" alt="">
-                            <img class="label-img-selector" src="" alt="">
-                            <img class="oil-img-selector" src="" alt="">
                         </div>
+                        <div class="con">
+                            <label for="company-2">업체명:</label>
+                            <select id="company-2" class="company-selector"></select>
+                        </div>
+                        <div class="con">
+                            <label for="oil-2">오일 선택:</label>
+                            <select id="oil-2" class="oil-selector"></select>
+                        </div>
+                        <div class="image-container">
+                            <img class="label-img-selector" src="" alt="">
+                        </div>
+                        <div class="con">
+                            <label>유통기한: </label>
+                            <input type="date">
+                        </div>
+                        <div class="con">
+                            <label>수입원:</label>
+                            <input type="text">
+                        </div>
+                    </div>
+                </td>
+                <!--작업3-->
+                <td>
+                    <div class="image-container">
+                        <img class="oil-img-selector" src="" alt="">
                     </div>
                 </td>
                 <td>
                     <div class="selector-group">
-                        <label for="top-seal-4">상단 루땡:</label>
-                        <select id="top-seal-4" class="top-seal-selector"></select>
-                        <label for="company-4">업체명:</label>
-                        <select id="company-4" class="company-selector"></select>
-                        <label for="oil-4">오일 선택:</label>
-                        <select id="oil-4" class="oil-selector"></select>
+                        <div class="con">
+                            <label for="top-seal-3">상단 루땡:</label>
+                            <select id="top-seal-3" class="top-seal-selector"></select>
+                        </div>
                         <div class="image-container">
                             <img class="top-seal-img-selector" src="" alt="">
-                            <img class="label-img-selector" src="" alt="">
-                            <img class="oil-img-selector" src="" alt="">
                         </div>
+                        <div class="con">
+                            <label for="company-3">업체명:</label>
+                            <select id="company-3" class="company-selector"></select>
+                        </div>
+                        <div class="con">
+                            <label for="oil-3">오일 선택:</label>
+                            <select id="oil-3" class="oil-selector"></select>
+                        </div>
+                        <div class="image-container">
+                            <img class="label-img-selector" src="" alt="">
+                        </div>
+                        <div class="con">
+                            <label>유통기한: </label>
+                            <input type="date">
+                        </div>
+                        <div class="con">
+                            <label>수입원:</label>
+                            <input type="text">
+                        </div>
+                    </div>
+                </td>
+                <!--작업4-->
+                <td>
+                    <div class="image-container">
+                        <img class="oil-img-selector" src="" alt="">
                     </div>
                 </td>
                 <td>
                     <div class="selector-group">
-                        <label for="top-seal-5">상단 루땡:</label>
-                        <select id="top-seal-5" class="top-seal-selector"></select>
-                        <label for="company-5">업체명:</label>
-                        <select id="company-5" class="company-selector"></select>
-                        <label for="oil-5">오일 선택:</label>
-                        <select id="oil-5" class="oil-selector"></select>
+                        <div class="con">
+                            <label for="top-seal-4">상단 루땡:</label>
+                            <select id="top-seal-4" class="top-seal-selector"></select>
+                        </div>
                         <div class="image-container">
                             <img class="top-seal-img-selector" src="" alt="">
+                        </div>
+                        <div class="con">
+                            <label for="company-4">업체명:</label>
+                            <select id="company-4" class="company-selector"></select>
+                        </div>
+                        <div class="con">
+                            <label for="oil-4">오일 선택:</label>
+                            <select id="oil-4" class="oil-selector"></select>
+                        </div>
+                        <div class="image-container">
                             <img class="label-img-selector" src="" alt="">
-                            <img class="oil-img-selector" src="" alt="">
+                        </div>
+                        <div class="con">
+                            <label>유통기한: </label>
+                            <input type="date">
+                        </div>
+                        <div class="con">
+                            <label>수입원:</label>
+                            <input type="text">
                         </div>
                     </div>
                 </td>
