layout change and seperate count

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <h1>생산 지시판</h1>
         
-        <table style="table-layout:auto">
+        <table style="table-layout:fixed">
             <tr>
                 <th colspan="2">작업1</th>
                 <th colspan="2">작업2</th>
@@ -22,6 +22,8 @@
                 <!--작업1-->
                 <td>
                     <div class="image-container">
+                        <label>생산 수량(개)</label>
+                        <input class="count" type="text">
                         <img class="oil-img-selector" src="" alt="">
                     </div>
                 </td>
@@ -58,6 +60,8 @@
                 <!--작업2-->
                 <td>
                     <div class="image-container">
+                        <label>생산 수량(개)</label>
+                        <input class="count" type="text">
                         <img class="oil-img-selector" src="" alt="">
                     </div>
                 </td>
@@ -94,6 +98,8 @@
                 <!--작업3-->
                 <td>
                     <div class="image-container">
+                        <label>생산 수량(개)</label>
+                        <input class="count" type="text">
                         <img class="oil-img-selector" src="" alt="">
                     </div>
                 </td>
@@ -130,6 +136,8 @@
                 <!--작업4-->
                 <td>
                     <div class="image-container">
+                        <label>생산 수량(개)</label>
+                        <input class="count" type="text">
                         <img class="oil-img-selector" src="" alt="">
                     </div>
                 </td>
