--- a/index.html
+++ b/index.html
@@ -9,14 +9,17 @@
 </head>
 <body>
     <div class="container">
-        <h1>생산 지시판</h1>
-        
+        <h1 id="title">생산 지시서</h1>
         <table style="table-layout:fixed">
+        <caption id="caption">
+            오늘 날짜는 <input id="today" type="date">입니다.
+            <button id="print-btn" onclick="printPage()">화면 인쇄</button>
+        </caption>
             <tr>
-                <th colspan="2">작업1</th>
-                <th colspan="2">작업2</th>
-                <th colspan="2">작업3</th>
-                <th colspan="2">작업4</th>
+                <th colspan="2">예상시간:<input class="time" type="time",min="00:00" max="23:59"> ~ <input class="time" type="time",min="00:00" max="23:59"></th>
+                <th colspan="2">예상시간:<input class="time" type="time",min="00:00" max="23:59"> ~ <input class="time" type="time",min="00:00" max="23:59"></th>
+                <th colspan="2">예상시간:<input class="time" type="time",min="00:00" max="23:59"> ~ <input class="time" type="time",min="00:00" max="23:59"></th>
+                <th colspan="2">예상시간:<input class="time" type="time",min="00:00" max="23:59"> ~ <input class="time" type="time",min="00:00" max="23:59"></th>
             </tr>
             <tr>
                 <!--작업1-->
