--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@
             </tr>
         </table>
     </div>
+    <script>const printPage = ()=>{window.print()}</script>
     <script src="index.js"></script>
 </body>
 </html>
