view count fixed

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <tr>
                 <th colspan="2">예상시간:<input class="time" type="time",min="00:00" max="23:59"> ~ <input class="time" type="time",min="00:00" max="23:59"></th>
                 <th colspan="2">예상시간:<input class="time" type="time",min="00:00" max="23:59"> ~ <input class="time" type="time",min="00:00" max="23:59"></th>
-                <th colspan="2">예상시간:<input class="time" type="time",min="00:00" max="23:59"> ~ <input class="time" type="time",min="00:00" max="23:59"></th>
-                <th colspan="2">예상시간:<input class="time" type="time",min="00:00" max="23:59"> ~ <input class="time" type="time",min="00:00" max="23:59"></th>
+                <!-- <th colspan="2">예상시간:<input class="time" type="time",min="00:00" max="23:59"> ~ <input class="time" type="time",min="00:00" max="23:59"></th>
+                <th colspan="2">예상시간:<input class="time" type="time",min="00:00" max="23:59"> ~ <input class="time" type="time",min="00:00" max="23:59"></th> -->
             </tr>
             <tr>
                 <!--작업1-->
@@ -99,7 +99,7 @@
                     </div>
                 </td>
                 <!--작업3-->
-                <td>
+                <!-- <td>
                     <div class="image-container">
                         <label>생산 수량(개)</label>
                         <input class="count" type="text">
@@ -137,7 +137,7 @@
                     </div>
                 </td>
                 <!--작업4-->
-                <td>
+                <!--<td>
                     <div class="image-container">
                         <label>생산 수량(개)</label>
                         <input class="count" type="text">
@@ -173,7 +173,7 @@
                             <input type="text">
                         </div>
                     </div>
-                </td>
+                </td> -->
             </tr>
         </table>
     </div>
