view size change

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <tr>
                 <!--작업1-->
                 <td>
-                    <div class="image-container">
+                    <div class="image-container-oil">
                         <label>생산 수량(개)</label>
                         <input class="count" type="text">
                         <img class="oil-img-selector" src="" alt="">
@@ -62,7 +62,7 @@
                 </td>
                 <!--작업2-->
                 <td>
-                    <div class="image-container">
+                    <div class="image-container-oil">
                         <label>생산 수량(개)</label>
                         <input class="count" type="text">
                         <img class="oil-img-selector" src="" alt="">
